  linking errors in systhreads.
  (David Allsopp, review by Jonah Beckford and Sébastien Hinderer)

### Bug fixes:

- #9214, #10709: Wrong unmarshaling of function pointers in debugger mode.
  This was causing ocamldebug to crash when running some user-defined printers.
  (Xavier Leroy, report by Rehan Malak, review by Gabriel Scherer and
   Vincent Laviron)

- #10473: Add CFI directives to RISC-V runtime and asmcomp.
  This allows stacktraces to work in gdb through C and OCaml calls.
  (Edwin Török, review by Nicolás Ojeda Bär and Xavier Leroy)

- #10539: Field kinds should be kept when copying types
  Losing the sharing meant that one could desynchronize them between several
  occurrences of self, allowing a method to be both public and hidden,
  which broke type soundness.
  (Jacques Garrigue, review by Leo White)

- #10542: Fix detection of immediate64 types through unboxed types.
  (Leo White, review by Stephen Dolan and Gabriel Scherer)

- #10590: Some typechecker optimisations
  (Stephen Dolan, review by Gabriel Scherer and Leo White)

- #10633: Stack overflow recovery in ocamlopt for AMD64/Linux and ARM/Linux
  was not restoring the minor heap pointer correctly
  (Stephen Dolan, review by Xavier Leroy)

- #10659: Fix freshening substitutions on imported modules
  (Leo White and Stephen Dolan, review by Matthew Ryan)

- #10677, #10679: Fix detection of CC as gcc in configure (allow for
  triplet-prefixed GCC) and fix all C compiler detection when CC is a path
  rather than a basename.
  (David Allsopp, report by Fabian @copy, review by Gabriel Scherer)

- #10690: Add --enable-native-toplevel to configure to enable installing
  ocamlnat as part of the main build (default is not to install it)
  (David Allsopp, review by Gabriel Scherer)

- #10693: Fix ident collision in includemod
  (Leo White, review by Matthew Ryan)

- #10702: Fix cast of more strictly aligned pointer in win32unix
  implementation of stat
  (Antonin Décimo, review by David Allsopp)
