@@ -11,6 +11,8 @@ type (_, _) eq = Refl : ('a, 'a) eq
 let f (type a b) (w1 : (a, b -> b) eq) (w2 : (a, int -> int) eq) (g : a) =
    let Refl = w1 in let Refl = w2 in g 3;;
 [%%expect{|
+val f : ('a, 'b -> 'b) eq -> ('a, int -> int) eq -> 'a -> 'b = <fun>
+|}, Principal{|
 Line 2, characters 37-40:
 2 |    let Refl = w1 in let Refl = w2 in g 3;;
                                          ^^^
